# webp2jpg

./: .gitignore  CHANGELOG.md  README.md  cli.py  install.sh  setup.cfg  setup.py
webp2jpg/: converter.py
