[metadata]
name = webp2jpg
version = 1.2.0
author = Julles Pio
description = A CLI tool for converting WebP images to JPEG.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/julles/webp2jpg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    Pillow>=10.0.0
    tqdm>=4.0.0

[options.entry_points]
console_scripts =
    webp2jpg = cli:main